# rota

./: README.md  pyproject.toml
src/rota/: __init__.py
tests/: test_adapter.py
