[project]
name = "rota"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Giuseppe Capizzi", email = "g.capizzi@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
